--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
 	"homepage": "https://github.com/ibrahimraimi/svelte-starter",
 	"license": "MIT",
 	"devDependencies": {
+		"@melt-ui/svelte": "^0.50.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/chroma-js": "^2.4.1",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"autoprefixer": "^10.4.16",
+		"chroma-js": "^2.4.2",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"phosphor-svelte": "^1.3.0",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
@@ -48,5 +52,11 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@significa/svelte-ui": "^0.0.34",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1"
+	}
 }
