--- a/package.json
+++ b/package.json
@@ -55,9 +55,8 @@
 	"type": "module",
 	"dependencies": {
 		"clsx": "^2.1.1",
-		"mode-watcher": "^0.3.0",
-		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vaul-svelte": "^0.3.1"
 	}
 }
